The legend is visible again (bug unstyled/ugly).

--- a/modules/map/components/active-overlays/_active-overlays.scss
+++ b/modules/map/components/active-overlays/_active-overlays.scss
@@ -1,3 +1,5 @@
+@import "active-overlays-item";
+
 .c-toggle-active-overlays {
   position: absolute;
   bottom: 0;
@@ -51,4 +53,5 @@
   border-bottom-color: $primary-light;
   background-color: $primary-light;
   z-index: 2;
+  overflow-y: scroll;
 }
